Black & White particles + Direction Fix

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 	<script id="fragmentShader" src="shaders/fragmentShader.glsl" type="x-shader/x-fragment" charset="utf-8"></script>
 
 	<script src="js/helper.js" charset="utf-8"></script>
+	<script src="js/fibonacciSphere.js" charset="utf-8"></script>
 	<script src="js/setup.js" charset="utf-8"></script>
 	<script src="js/scene.js" charset="utf-8"></script>
 </body>
