--- a/2/src/index.html
+++ b/2/src/index.html
@@ -15,6 +15,7 @@
 
 	<script src="js/helper.js" charset="utf-8"></script>
 	<script src="js/fibonacciSphere.js" charset="utf-8"></script>
+	<script src="js/data.js" charset="utf-8"></script>
 	<script src="js/setup.js" charset="utf-8"></script>
 	<script src="js/scene.js" charset="utf-8"></script>
 </body>
