--- a/8/src/index.html
+++ b/8/src/index.html
@@ -13,6 +13,8 @@
 		<input id="scrubber" type="range" min="0" max="1" step=".001" value="0">
 	</div>
 	<script src="js/libs/three.min.js" charset="utf-8"></script>
+	<script src="js/libs/jszip.min.js" charset="utf-8"></script>
+	<script src="js/libs/FileSaver.min.js" charset="utf-8"></script>
 
 	<script id="vertexShader" src="shaders/vertexShader.glsl" type="x-shader/x-vertex" charset="utf-8"></script>
 	<script id="fragmentShader" src="shaders/fragmentShader.glsl" type="x-shader/x-fragment" charset="utf-8"></script>
