--- a/8/src/index.html
+++ b/8/src/index.html
@@ -10,7 +10,7 @@
 	<canvas id="renderer" class="four-three"></canvas>
 	<div id="controls">
 		<input id="playbtn" type="checkbox">
-		<input id="scrubber" type="range" min="0" max="1" step=".001" value="0">
+		<input id="scrubber" type="range" min="0" max="1" step="1" value="0">
 	</div>
 	<script src="js/libs/three.min.js" charset="utf-8"></script>
 	<script src="js/libs/jszip.min.js" charset="utf-8"></script>
